Overflow issue.

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   min-height: 100%;
   background-color: #fff;
   color: #333 overflow-x: hidden;
+  overflow: inherit;
   overflow-y: hidden;
   background-image: -webkit-radial-gradient(50% 50%, circle, white, #bbb);
   background-image: radial-gradient(circle at 50% 50%, white, #bbb);
@@ -82,7 +83,7 @@ img {
   display: inline-block
 }
 .bg {
-  position: fixed;
+  position: absolute;
   left: 0px;
   top: 0px;
   right: 0px;
